name:                basilica
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Ian Henry
maintainer:          ianthehenry@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable basilica
  main-is:             Main.hs

  other-modules: Database
               , Database.Internal
               , Database.Posts
               , Database.Users
               , Mailer
               , Routes
               , Sockets
               , Types

  build-depends: DRBG
               , HDBC
               , HDBC-sqlite3
               , aeson
               , attoparsec
               , base >=4.6 && <5.0
               , base-prelude
               , base16-bytestring
               , bytestring
               , case-insensitive
               , configurator
               , containers
               , cryptohash
               , filepath
               , http-types
               , io-streams
               , mtl
               , random
               , scotty
               , suspend
               , text
               , time
               , timers
               , transformers
               , unix-time
               , wai
               , wai-websockets
               , warp
               , websockets
               , wreq

  default-extensions: OverloadedStrings
                    , NoImplicitPrelude
                    , TupleSections
                    , NamedFieldPuns
                    , RecordWildCards

  default-language: Haskell2010
