name:                basilica
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Ian Henry
maintainer:          ianthehenry@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable basilica
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: DRBG
               , aeson
               , base
               , classy-prelude
               , base16-bytestring
               , bytestring
               , configurator
               , containers
               , cryptohash
               , filepath
               , http-types
               , mtl
               , transformers
               , random
               , scotty
               , suspend
               , text
               , time
               , timers
               , unix-time
               , wai
               , case-insensitive
               , warp
               , websockets
               , wai-websockets
               , io-streams
               , wreq
               , lens
               , http-client
               , lifted-base
               , persistent-sqlite
               , persistent
               , persistent-template
               , monad-logger
               , esqueleto
               , monad-control

  other-modules: Database
               , Database.Internal
               , Database.Posts
               , Database.Users
               , Database.Schema
               , Mailer
               , Routes
               , Sockets
               , Types

  default-extensions: OverloadedStrings
                    , NoImplicitPrelude
                    , NamedFieldPuns
                    , RecordWildCards
                    , TypeFamilies
                    , FlexibleContexts

  default-language: Haskell2010
